--- a/python.ipynb
+++ b/python.ipynb
@@ -103,8 +103,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "103d6269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n",
+      "9\n",
+      "4\n",
+      "2025-07-23 16:43:24.757809\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Modules in python\n",
+    "##modules me kya hota hai na ki pehele se code likhe hue hote hai \n",
+    "# apn wo use krte hai use import krke\n",
+    "# math\n",
+    "# keyword\n",
+    "#random \n",
+    "# datetime\n",
+    "import math\n",
+    "math.factorial(5)  # 120\n",
+    "math.floor(5.6)  # 5 --> it will lead us to a lower integer\n",
+    "\n",
+    "\n",
+    "import keyword\n",
+    "print(keyword.kwlist)  # it will give us the list of all keywords in python\n",
+    "\n",
+    "import random\n",
+    "print(random.randint(1, 10))  # it will give us a random number between 1 and 10\n",
+    "print(random.choice([1, 2, 3, 4, 5]))\n",
+    "\n",
+    "\n",
+    "import datetime\n",
+    "print(datetime.datetime.now())  # it will give us the current date and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9cee38f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please wait a moment while I gather a list of all available modules...\n",
+      "\n",
+      "test_sqlite3: testing with version '2.6.0', sqlite_version '3.45.1'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\nltk\\twitter\\__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\pkgutil.py:92: UserWarning: The numpy.array_api submodule is still experimental. See NEP 47.\n",
+      "  __import__(info.name)\n",
+      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\pkgutil.py:92: FutureWarning: The 'optree.integration' module is deprecated and will be removed in version 0.18.0. Please use 'optree.integrations' instead.\n",
+      "  __import__(info.name)\n",
+      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython             calendar            ml_dtypes           sunau\n",
+      "PIL                 certifi             mmap                svgling\n",
+      "__future__          cgi                 mmapfile            svgwrite\n",
+      "__hello__           cgitb               mmsystem            symtable\n",
+      "__phello__          charset_normalizer  modulefinder        sys\n",
+      "_abc                chunk               msilib              sysconfig\n",
+      "_aix_support        clang               msvcrt              tabnanny\n",
+      "_ast                click               multiprocessing     tarfile\n",
+      "_asyncio            cmath               namex               telnetlib\n",
+      "_bisect             cmd                 narwhals            tempfile\n",
+      "_blake2             code                nest_asyncio        tenacity\n",
+      "_bootsubprocess     codecs              netbios             tensorboard\n",
+      "_bz2                codeop              netrc               tensorboard_data_server\n",
+      "_codecs             collections         nltk                tensorflow\n",
+      "_codecs_cn          colorama            nntplib             tensorflow_io_gcs_filesystem\n",
+      "_codecs_hk          colorsys            nt                  termcolor\n",
+      "_codecs_iso2022     comm                ntpath              test\n",
+      "_codecs_jp          commctrl            ntsecuritycon       textwrap\n",
+      "_codecs_kr          compileall          nturl2path          this\n",
+      "_codecs_tw          concurrent          numbers             threading\n",
+      "_collections        configparser        numpy               threadpoolctl\n",
+      "_collections_abc    contextlib          odbc                time\n",
+      "_compat_pickle      contextvars         opcode              timeit\n",
+      "_compression        contourpy           operator            timer\n",
+      "_contextvars        copy                opt_einsum          tkinter\n",
+      "_csv                copyreg             optparse            token\n",
+      "_ctypes             crypt               optree              tokenize\n",
+      "_ctypes_test        csv                 os                  toml\n",
+      "_datetime           ctypes              packaging           tomllib\n",
+      "_decimal            curses              pandas              tornado\n",
+      "_distutils_hack     cv2                 parso               tqdm\n",
+      "_elementtree        cycler              pasta               trace\n",
+      "_functools          dataclasses         pathlib             traceback\n",
+      "_hashlib            datetime            pdb                 tracemalloc\n",
+      "_heapq              dateutil            perfmon             traitlets\n",
+      "_imp                dbm                 pickle              tty\n",
+      "_io                 dde                 pickletools         turtle\n",
+      "_json               debugpy             pip                 turtledemo\n",
+      "_locale             decimal             pipes               types\n",
+      "_lsprof             decorator           pkg_resources       typing\n",
+      "_lzma               difflib             pkgutil             typing_extensions\n",
+      "_markupbase         dis                 platform            tzdata\n",
+      "_md5                distutils           platformdirs        unicodedata\n",
+      "_msi                doctest             plistlib            unittest\n",
+      "_multibytecodec     email               poplib              urllib\n",
+      "_multiprocessing    encodings           posixpath           urllib3\n",
+      "_opcode             ensurepip           pprint              uu\n",
+      "_operator           enum                profile             uuid\n",
+      "_osx_support        errno               prompt_toolkit      venv\n",
+      "_overlapped         executing           pstats              warnings\n",
+      "_pickle             faulthandler        psutil              watchdog\n",
+      "_py_abc             filecmp             pty                 wave\n",
+      "_pydecimal          fileinput           pure_eval           wcwidth\n",
+      "_pyio               flask               py_compile          weakref\n",
+      "_queue              flatbuffers         pyarrow             webbrowser\n",
+      "_random             fnmatch             pyclbr              werkzeug\n",
+      "_sha1               fontTools           pydeck              wheel\n",
+      "_sha256             fractions           pydoc               win2kras\n",
+      "_sha3               ftplib              pydoc_data          win32api\n",
+      "_sha512             functools           pyexpat             win32clipboard\n",
+      "_signal             gast                pygments            win32com\n",
+      "_sitebuiltins       gc                  pylab               win32con\n",
+      "_socket             genericpath         pyparsing           win32console\n",
+      "_sqlite3            gensim              pythoncom           win32cred\n",
+      "_sre                getopt              pytz                win32crypt\n",
+      "_ssl                getpass             pywin               win32cryptcon\n",
+      "_stat               gettext             pywin32_bootstrap   win32event\n",
+      "_statistics         git                 pywin32_testutil    win32evtlog\n",
+      "_string             gitdb               pywintypes          win32evtlogutil\n",
+      "_strptime           glob                queue               win32file\n",
+      "_struct             graphlib            quopri              win32gui\n",
+      "_symtable           grpc                random              win32gui_struct\n",
+      "_testbuffer         gzip                rasutil             win32help\n",
+      "_testcapi           h5py                re                  win32inet\n",
+      "_testconsole        hashlib             referencing         win32inetcon\n",
+      "_testimportmultiple heapq               regcheck            win32job\n",
+      "_testinternalcapi   hmac                regex               win32lz\n",
+      "_testmultiphase     html                regutil             win32net\n",
+      "_thread             http                reprlib             win32netcon\n",
+      "_threading_local    idlelib             requests            win32pdh\n",
+      "_tkinter            idna                rich                win32pdhquery\n",
+      "_tokenize           imaplib             rlcompleter         win32pdhutil\n",
+      "_tracemalloc        imghdr              rpds                win32pipe\n",
+      "_typing             imp                 runpy               win32print\n",
+      "_uuid               importlib           sched               win32process\n",
+      "_warnings           inspect             scipy               win32profile\n",
+      "_weakref            io                  seaborn             win32ras\n",
+      "_weakrefset         ipaddress           secrets             win32rcparser\n",
+      "_win32sysloader     ipykernel           select              win32security\n",
+      "_win32verstamp_pywin32ctypes ipykernel_launcher  selectors           win32service\n",
+      "_winapi             ipython_pygments_lexers servicemanager      win32serviceutil\n",
+      "_winxptheme         isapi               setuptools          win32timezone\n",
+      "_xxsubinterpreters  itertools           shelve              win32trace\n",
+      "_zoneinfo           itsdangerous        shlex               win32traceutil\n",
+      "abc                 jedi                shutil              win32transaction\n",
+      "absl                jinja2              signal              win32ts\n",
+      "adodbapi            joblib              site                win32ui\n",
+      "afxres              json                six                 win32uiole\n",
+      "aifc                jsonschema          sklearn             win32verstamp\n",
+      "altair              jsonschema_specifications smart_open          win32wnet\n",
+      "antigravity         jupyter             smmap               winerror\n",
+      "argparse            jupyter_client      smtpd               winioctlcon\n",
+      "array               jupyter_core        smtplib             winnt\n",
+      "ast                 keras               sndhdr              winperf\n",
+      "asttokens           keyword             socket              winreg\n",
+      "astunparse          kiwisolver          socketserver        winsound\n",
+      "asynchat            lib2to3             sqlite3             winxpgui\n",
+      "asyncio             linecache           sre_compile         winxptheme\n",
+      "asyncore            locale              sre_constants       wrapt\n",
+      "atexit              logging             sre_parse           wsgiref\n",
+      "attr                lzma                ssl                 xdrlib\n",
+      "attrs               mailbox             sspi                xml\n",
+      "audioop             mailcap             sspicon             xmlrpc\n",
+      "base64              markdown            stack_data          xxsubtype\n",
+      "bdb                 markdown_it         start_pythonwin     zipapp\n",
+      "binascii            markupsafe          stat                zipfile\n",
+      "bisect              marshal             statistics          zipimport\n",
+      "blinker             math                streamlit           zlib\n",
+      "builtins            matplotlib          string              zmq\n",
+      "bz2                 matplotlib_inline   stringprep          zoneinfo\n",
+      "cProfile            mdurl               struct              \n",
+      "cachetools          mimetypes           subprocess          \n",
+      "\n",
+      "Enter any module name to get more help.  Or, type \"modules spam\" to search\n",
+      "for modules whose name or summary contain the string \"spam\".\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(\"modules\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2cee4572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 10000\n",
+      "9 9090.90909090909\n",
+      "8 8264.462809917353\n",
+      "7 7513.148009015775\n",
+      "6 6830.134553650703\n",
+      "5 6209.213230591548\n",
+      "4 5644.739300537771\n",
+      "3 5131.5811823070635\n",
+      "2 4665.07380209733\n",
+      "1 4240.976183724845\n"
+     ]
+    }
+   ],
+   "source": [
+    "### loops \n",
+    "#iska mtlb kisi bhi cheez ko baar baar krna\n",
+    "# if someone ask that ki loop kaha kaam aata h toh the proffesional answer is that \n",
+    "# it is used in automation for websites like flikart , zomato etc\n",
+    "\n",
+    "#while loop\n",
+    "\n",
+    "# number = int(input(\"enter a number: \"))\n",
+    "\n",
+    "# i = 1\n",
+    "# while i < 11:\n",
+    "#     print(number,\"*\",i,\"=\", number * i)  # print the multiplication table\n",
+    "#     i += 1  # increment n by 1\n",
+    "\n",
+    "# while else loop\n",
+    "# x =1 \n",
+    "\n",
+    "# while x < 5:\n",
+    "#     print(x)\n",
+    "#     x +=1\n",
+    "# else:\n",
+    "#     print(\"x is no longer less than 5\")\n",
+    "\n",
+    "\n",
+    "# for loop\n",
+    "# for i in range(1,11):\n",
+    "#     print(i)\n",
+    "\n",
+    "# for i in \"delhi\":\n",
+    "#     print(i, end=\" \")  # print each character in the string \"delhi\" on the same line\n",
+    "\n",
+    "# ques : suppose if the population of a city is 10000 and it increases by 10% every year,\n",
+    "# at the end of 10 years, what will be the population of the city?\n",
+    "cur_pop =   10000\n",
+    "\n",
+    "for i in range(10,0,-1):\n",
+    "    print(i,cur_pop)\n",
+    "    cur_pop =cur_pop/1.1 # decrease the population by 10%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e73e971",
    "metadata": {},
    "outputs": [],
    "source": []
