--- a/python.ipynb
+++ b/python.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "2cee4572",
    "metadata": {},
    "outputs": [
@@ -328,16 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 10000\n",
-      "9 9090.90909090909\n",
-      "8 8264.462809917353\n",
-      "7 7513.148009015775\n",
-      "6 6830.134553650703\n",
-      "5 6209.213230591548\n",
-      "4 5644.739300537771\n",
-      "3 5131.5811823070635\n",
-      "2 4665.07380209733\n",
-      "1 4240.976183724845\n"
+      "2.5\n"
      ]
     }
    ],
@@ -375,17 +366,109 @@
     "\n",
     "# ques : suppose if the population of a city is 10000 and it increases by 10% every year,\n",
     "# at the end of 10 years, what will be the population of the city?\n",
-    "cur_pop =   10000\n",
+    "# cur_pop =   10000\n",
     "\n",
-    "for i in range(10,0,-1):\n",
-    "    print(i,cur_pop)\n",
-    "    cur_pop =cur_pop/1.1 # decrease the population by 10%\n"
+    "# for i in range(10,0,-1):\n",
+    "#     print(i,cur_pop)\n",
+    "#     cur_pop =cur_pop/1.1 # decrease the population by 10%\n",
+    "\n",
+    "## ques : 1/1! + 2/2! + 3/3! make a series that will end by a user input\n",
+    "n = int(input(\"enter n \"))\n",
+    "\n",
+    "result = 0 \n",
+    "fact = 1\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    " fact = fact *i \n",
+    " result = result + i/fact\n",
+    "\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0e73e971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "1 2 1 \n",
+      "1 2 3 2 1 \n",
+      "1 2 3 4 3 2 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "## Nested Loops\n",
+    "# ek ke ander ek loop\n",
+    "for i  in range (1,5):\n",
+    "    for j in range(1, i+1):\n",
+    "            # print('*',end=' ')\n",
+    "    #   print('*',end=' ')\n",
+    "        print(j,end=' ')   \n",
+    "    for k in range(i-1, 0, -1):\n",
+    "        print(k,end=' ')  \n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "76177026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#break statement ---> isme agr apn ne  liye i==5 toh yeh loop 1-4 hi chalega fir break ho jayega\n",
+    "# lower = int(input(\"enter lower limit: \"))\n",
+    "# upper = int(input(\"enter upper limit: \"))\n",
+    "# for i in range(lower, upper + 1):\n",
+    "#     for j in range(2, i):\n",
+    "#         if i % j == 0:\n",
+    "#             break\n",
+    "#     else:\n",
+    "#         print(i)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#continue statement ---> isme agr apn ne  liye i==5 toh yeh loop 1-4 chalega fir 5 ko skip karke 6 pe chale jayega\n",
+    "# for i in range(1, 11):\n",
+    "#    if i == 5:\n",
+    "#     continue  # skip the rest of the loop when i is 5\n",
+    "#    print(i)  # this will print all numbers except 5\n",
+    "\n",
+    "\n",
+    "# pass statement ---> isme agr apn ne  liye i==5 toh yeh loop 1-10 chalega fir 5 pe aake kuch nahi karega\n",
+    "for i in range(1, 11):\n",
+    "    if i == 5:\n",
+    "        pass  # do nothing when i is 5\n",
+    "    print(i)  # this will print all numbers including 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e73e971",
+   "id": "2e360571",
    "metadata": {},
    "outputs": [],
    "source": []
