--- a/python.ipynb
+++ b/python.ipynb
@@ -467,8 +467,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "2e360571",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tushar'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## String  ---> collection of characters----> basically string koi bhi characters hai\n",
+    "# s = \"delhi\"\n",
+    "# # s\n",
+    "# print(s[3])\n",
+    "\n",
+    "# ## Indexing me toh apn directly kisi bhi character ko access kar sakte hai or \n",
+    "# # slicing me apn kisi bhi character se lekar kisi bhi character tak ka string le sakte hai\n",
+    "# print(s[1:4])  # it will give us the string from index 1\n",
+    "# ## python m agr ek baar string bana li toh usko change nahi kar sakte wo immutable hota hai\n",
+    "# mtlb delhi h agr me d capital krna chahta hu toh me nahi kar sakta\n",
+    "\n",
+    "\n",
+    "\n",
+    "## string pura delete ho sakta hai pr ek single letters nahi\n",
+    "\n",
+    "# arithmatic operators on strings \n",
+    "# print(\"delhi\" +  \"ncr\")  # it will concatenate the two strings\n",
+    "\n",
+    "# #multiplication of strings\n",
+    "# print(\"delhi\" * 3)  # it will print the string 3 times\n",
+    "\n",
+    "# \"delhi\" == \"mumbai\"\n",
+    "\n",
+    "# if we take mumbai > dekhi , it will return false because it is comparing\n",
+    "#  the first character of both strings, that means jo dictionary order me pehle aata hai\n",
+    "# wo chota hota hai\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## common function in string\n",
+    "## ---> len\n",
+    "# ### ---> max\n",
+    "# ### ----> min\n",
+    "# ### ---> sort\n",
+    "# print(len('hello world'))\n",
+    "# print(max('hello world'))\n",
+    "# print(min('hello world'))  ## blank space count krke dedega \n",
+    "# print(sorted('hello world'))\n",
+    "\n",
+    "\n",
+    "# s=(\"hello world\")\n",
+    "# s.capitalize()\n",
+    "# s.title()\n",
+    "# s.upper()\n",
+    "# s.lower()\n",
+    "# s.swapcase() ---> lower ko upper / upper ko capital\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 'my name is Tushar'.count('i')\n",
+    "# 'my name is Tushar'.find(\"z\")\n",
+    "# # 'my name is Tushar'.index(\"T\")\n",
+    "# 'my name is Tushar'.index(\"is\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "#ends with / start with\n",
+    "# 'my name is Tushar'.endswith(\"sho\")\n",
+    "# 'my name is Tushar'.startswith(\"m\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# format -----> it is use to fill the bracket{} value\n",
+    "# 'my name {} Tushar'.format(\"is\")\n",
+    "\n",
+    "\n",
+    "# isalnum/ isalpha / isdigit / isidentifier\n",
+    "# 'mynameisTushar123'.isalnum() # there should not be space in between // alphabetic-numeric\n",
+    "# 'tushar'.isalpha() # check only alphabets\n",
+    "# '123'.isdigit() ## check only digit\n",
+    "# '1name'.isidentifier()  #check identifier like 1name is flase but name1 is true\n",
+    "\n",
+    "\n",
+    "\n",
+    "## split / join\n",
+    "# 'my name is Tushar'.split()\n",
+    "# \"-\".join(['my', 'name', 'is', 'Tushar'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "#replace\n",
+    "# 'my name is Tushar'.replace(\"Tushar\",\"Joshi\")\n",
+    "\n",
+    "\n",
+    "#strip\n",
+    "\"tushar                              \".strip() # it remove befaltu ka space\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e865f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 21, 22, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Lists ---------------\n",
+    "# list is data type where you store  multiple items  under 1 name  like L =[1,2,3,4,\"jo\"]\n",
+    "#why list required in programming /?\n",
+    "\n",
+    "#aray vs list\n",
+    "# fixed vs dynamic size\n",
+    "# convenience( only can store one type like array hai toh aaray , name to name) vs Heterogenous\n",
+    "# speed of execution array win\n",
+    "# memory array takes more memory\n",
+    "# list is referential array \n",
+    "\n",
+    "\n",
+    "# id() , it gives the memory adress\n",
+    "\n",
+    "#Characterstics of list\n",
+    "#ordered-----> [1,2,3] != [3,2,1]-----> they should be in same order \n",
+    "#changeble / mutable\n",
+    "#heterogenous\n",
+    "#can have duplicates\n",
+    "#are dynamic\n",
+    "#can be nested\n",
+    "# item can be accessed\n",
+    "# can contain any kind of object in python\n",
+    "\n",
+    "# creating a list \n",
+    "\n",
+    "# #empty list\n",
+    "# l=[]\n",
+    "\n",
+    "# #1D list\n",
+    "# print([1,2,3,4])\n",
+    "\n",
+    "# # 2D list\n",
+    "# print([1,2,3,[4,5]])\n",
+    "\n",
+    "# # 3D list\n",
+    "# # print([1,2,3,[4,[5,6],7],8])\n",
+    "# print([[[1,2],[3,4],[5,6]]]) #n0. of sq brackets sometimes also define Dimensions\n",
+    "\n",
+    "# print(list(\"hello\"))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# accessing of list\n",
+    "#indexing \n",
+    "# l=[1,2,3,4,5]\n",
+    "# print(l[3])\n",
+    "\n",
+    "# #slicing \n",
+    "# l=[1,2,3,4,5]\n",
+    "# print(l[0:5])\n",
+    "\n",
+    "## Addeing  items to list\n",
+    "# append\n",
+    "# l=[1,2,3,4]\n",
+    "# l.append([5,6,7])\n",
+    "# l\n",
+    "# #extend \n",
+    "# l.extend([5,6,7,8])\n",
+    "# l\n",
+    "#append single item add krne ki kosis krega extend multiple\n",
+    "\n",
+    "\n",
+    "\n",
+    "# insert ---- suppose if we want to add in between list\n",
+    "# l=[1,2,3,4,5]\n",
+    "# l.insert(1,100)\n",
+    "# print(l)\n",
+    "\n",
+    "# editing \n",
+    "# l=[1,2,3,4,5]\n",
+    "# # l[1]=50  ----> indexing\n",
+    "# l[1:3]=[21,22] #----> slicing\n",
+    "# print(l)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32ded605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tuples\n",
+    "# a tuple in python is similar to list. difference is that we can not change the tuple after we\n",
+    "# make a tuple but we can change the list\n",
+    "# immutable ----ordered------allow duplicates\n",
+    " \n",
+    "\n",
+    "## empty tuple\n",
+    "# t1 =()\n",
+    "# print(t1)\n",
+    "#single tuple\n",
+    "# t1=(\"hello\")\n",
+    "# print(type(t1)) ----> this will show a type as a string bcz single tuple required comma(,)\n",
+    "# t1=(\"hello\",)\n",
+    "# print(type(t1))\n",
+    "\n",
+    "#homo tuple\n",
+    "# t3=(1,2,3,4)\n",
+    "# print(t3)\n",
+    "\n",
+    "#hetero\n",
+    "# t4=(1,2.5,True,[1,2,3])\n",
+    "# print(t4)\n",
+    "\n",
+    "\n",
+    "# 2d tuple\n",
+    "# t5=(1,2,(4,5))\n",
+    "# print(t5)\n",
+    "\n",
+    "#using type conversion\n",
+    "# t6=tuple('hello')\n",
+    "# print(t6)\n",
+    "\n",
+    "\n",
+    "# accessing the tuple (slicing and indexing)\n",
+    "# print(t3) indexing\n",
+    "# print(t3[0:3])\n",
+    "\n",
+    "#editing\n",
+    "#once the tuple is made it cannot be edit as it is immutable\n",
+    "\n",
+    "## adding ----> there is no add in tuple\n",
+    "## in delete----> we can delete entire tuple not a single one\n",
+    "\n",
+    "\n",
+    "#operations in tuple\n",
+    "\n",
+    "# # + and *\n",
+    "# t1=(1,2,3,4)\n",
+    "# t2=(5,6,7,8)\n",
+    "# print(t1 + t2)\n",
+    "\n",
+    "# print(t1*3)  #it will multiple threee times\n",
+    "\n",
+    "# # membership\n",
+    "# 2 in t1\n",
+    "\n",
+    "# #iteration\n",
+    "# for i in t1:\n",
+    "#     print(i)\n",
+    "\n",
+    "#function of tuples\n",
+    "# #len/max/min/max/sum\n",
+    "# t=(1,2,3,4)\n",
+    "# sum(t)\n",
+    "# len(t)\n",
+    "# max(t)\n",
+    "# min(t)\n",
+    "# sorted(t,reverse=True)  # for reversing we use  reverse\n",
+    "# t.count(5)\n",
+    "# t.index(2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# difference b/w tuples\n",
+    "# syntax/ immuatble / speed / memory / built in  functionality less / error prone / usability\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3826d8b5",
    "metadata": {},
    "outputs": [],
    "source": []
