--- a/python.ipynb
+++ b/python.ipynb
@@ -677,10 +677,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "[(1, 6), (2, 7), (3, 8), (4, 9)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,6 +761,26 @@
     "\n",
     "# difference b/w tuples\n",
     "# syntax/ immuatble / speed / memory / built in  functionality less / error prone / usability\n",
+    "\n",
+    "# in tuples both side valule should we equal like if there is a,b,c = there should be 1,2,3\n",
+    "# but if you have a and b but value are more use *others to store remaining values\n",
+    "# # examplle\n",
+    "# a,b,*others=(1,2,3,4)\n",
+    "# print(a,b)\n",
+    "# print(others)\n",
+    "\n",
+    "\n",
+    "# swaping prog\n",
+    "# a=1\n",
+    "# b=2\n",
+    "# a,b =b,a\n",
+    "# print(a,b)\n",
+    "\n",
+    "# zip function\n",
+    "a=(1,2,3,4,5)\n",
+    "b=(6,7,8,9)\n",
+    "# zip(a,b)\n",
+    "tuple(zip(a,b)) # tu unzip\n",
     "\n"
    ]
   },
@@ -769,8 +789,143 @@
    "execution_count": null,
    "id": "3826d8b5",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "frozenset({1, 2, frozenset({3, 4})})"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## sets\n",
+    "# a set is a unordered  collections of item. every set is unique(no duplicates) and must be imuuutable\n",
+    "#however set itself is mutable . we can add or remove item from it\n",
+    " \n",
+    "#empty\n",
+    "# s={} # THIS IS MAKE set but by default type is dict \n",
+    "# s=set() # so this is use for empty set\n",
+    "\n",
+    "#1d and 2d set\n",
+    "# s={1,2,3}\n",
+    "# print(s)\n",
+    "# s1={1,2,3,{4,5}}  ---> will give error bcz not possible\n",
+    "# print(s1)\n",
+    "\n",
+    "#homo and hetero\n",
+    "# s3={1,4.5,'hello',True} # in this true is treated as 1 and 1 is already present , no duplicates\n",
+    "# print(s3)\n",
+    "\n",
+    "#list in set\n",
+    "# s=([1,2,3])\n",
+    "# s\n",
+    "\n",
+    "\n",
+    "#accessing\n",
+    "#-----> there is no indexing\n",
+    "#----> no slicing\n",
+    "\n",
+    "\n",
+    "#editing\n",
+    "#-----> no editing\n",
+    "\n",
+    "\n",
+    "#adding\n",
+    "# s={1,2,3}\n",
+    "# s.add(5)\n",
+    "# s\n",
+    "#update\n",
+    "# s={1,2,3}\n",
+    "# s.update([5,6,7])\n",
+    "# s\n",
+    "\n",
+    "\n",
+    "#deleting\n",
+    "#del\n",
+    "# s={1,2,3,4,5}\n",
+    "# del s ---> can delete entire\n",
+    "# s.discard(2) # it delete particular element\n",
+    "# s.remove(2) # diff b/w discard and remove is that of the item is not present remove give eror\n",
+    "# s.pop() #it delete random item\n",
+    "# s.clear() #it clear the set\n",
+    "# s\n",
+    "\n",
+    "\n",
+    "#set operations\n",
+    "\n",
+    "#union(|)\n",
+    "s={1,2,3,4}\n",
+    "a={3,4,5,6}\n",
+    "# s|a\n",
+    "\n",
+    "#intersection (&)\n",
+    "# s&a\n",
+    "\n",
+    "#difference (-) --s ke item jo a m nahi hai\n",
+    "# s-a\n",
+    "\n",
+    "#symmetric difference (^)\n",
+    "# s^a\n",
+    "\n",
+    "#membership\n",
+    "# 1 in s\n",
+    "\n",
+    "#iteration \n",
+    "# for i in a:\n",
+    "#     print(i)\n",
+    "\n",
+    "\n",
+    "# set function\n",
+    "#len/ sum / sor / max/ min\n",
+    "# s={1,2,3,4,5}\n",
+    "# len(s)\n",
+    "# sum(s)\n",
+    "# max(s)\n",
+    "# min(s)\n",
+    "# sorted(s,reverse=True)\n",
+    "\n",
+    "#union / update\n",
+    "# s.union(a)\n",
+    "# s.update(a) # isme s me pura channge aajayega a chl jayega usme pr a wesa hi rahega print krwane p\n",
+    "\n",
+    "#intersection / intersection_update\n",
+    "\n",
+    "#difference / difference_update\n",
+    "\n",
+    "#symmeteric_difference / symmeteric_difference_update\n",
+    "\n",
+    "\n",
+    "#isdisjoint / issubset / issuperset\n",
+    "# s.isdisjoint(a)   # isme yeh check krta hai ki khuch common nahi hai\n",
+    "# s.issubset(a)\n",
+    "# s.issuperset(a)\n",
+    "\n",
+    "#Frozen set --> it is just  an immutable version of  python set  object\n",
+    "#create frozen set\n",
+    "# fs = frozenset([1,2,3])\n",
+    "# fs\n",
+    "#------> operations sare kaam krenge isme bhi bs del wagera chod k bcz immuatble\n",
+    "# whne to use --> jab read only chaiye\n",
+    "#2d set ---poosible\n",
+    "# fs=frozenset([1,2,frozenset([3,4])])\n",
+    "# fs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84144ce",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# \n",
+    "# \n"
+   ]
   }
  ],
  "metadata": {
