--- a/python.ipynb
+++ b/python.ipynb
@@ -793,10 +793,10 @@
     {
      "data": {
       "text/plain": [
-       "frozenset({1, 2, frozenset({3, 4})})"
+       "{30, 35, 40, 45, 50}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,19 +913,167 @@
     "#2d set ---poosible\n",
     "# fs=frozenset([1,2,frozenset([3,4])])\n",
     "# fs\n",
+    "\n",
+    "\n",
+    "#set comprehension\n",
+    "# {i for i in range(1,11)}\n",
+    "# {i*5 for i in range(1,11) if i>5}\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "f84144ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: {1: 2, 2: 4, 3: 6, 4: 8, 5: 10, 6: 12, 7: 14, 8: 16, 9: 18, 10: 20},\n",
+       " 3: {1: 3, 2: 6, 3: 9, 4: 12, 5: 15, 6: 18, 7: 21, 8: 24, 9: 27, 10: 30},\n",
+       " 4: {1: 4, 2: 8, 3: 12, 4: 16, 5: 20, 6: 24, 7: 28, 8: 32, 9: 36, 10: 40}}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# \n",
-    "# \n"
+    "## Dictionary\n",
+    "#Dict in py  is collection of keys values , used to store data values  like a map , which \n",
+    "# , unlike  other data types which  hold  only single  value as a element\n",
+    "# in some lang. it is known as map or assosiative  arrays\n",
+    "\n",
+    "# dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\"}\n",
+    "# dict\n",
+    "\n",
+    "# mutable /  indexing  has no meaning / keys can't be /keys can't be mutable item\n",
+    "\n",
+    "#create dictionary\n",
+    "\n",
+    "#empty\n",
+    "# d={}\n",
+    "\n",
+    "#1d\n",
+    "dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\"}\n",
+    "#with mixed key\n",
+    "# d2={(1,2,3):1,\"hello\":\"world\"}\n",
+    "\n",
+    "#2d --> json\n",
+    "# d={\n",
+    "#     'name':'jo',\n",
+    "#     'college': 'bit',\n",
+    "#     'subject':{\n",
+    "#     'maths':54,\n",
+    "#     'english':89}\n",
+    "# }\n",
+    "\n",
+    "#using sequence  and dict function\n",
+    "# d= dict([('name', 'jo'),('age',3)])\n",
+    "# d\n",
+    "\n",
+    "#duplicates key\n",
+    "# d={'name':\"Tushar\", 'name':\"joshi\"} #--> it give last one\n",
+    "\n",
+    "#mutable item as a key\n",
+    "# dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\" ,(1,2,3):3}\n",
+    "# dict # agr yaha p []yeh bracket use krte toh error aata\n",
+    "\n",
+    "#dictionary are unordered\n",
+    "\n",
+    "##accessing \n",
+    "# dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\"}\n",
+    "# dict['name']\n",
+    "# dict.get('name')\n",
+    "\n",
+    "#adding new value\n",
+    "# dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\"}\n",
+    "\n",
+    "#remove\n",
+    "# dict={'name':\"Tushar\", \"class\": 12,\"gender\":\"male\"}\n",
+    "# # dict.pop('name')\n",
+    "# # dict.popitem() #---- delete last value\n",
+    "# #del dict['name] #---> work same as pop\n",
+    "# # dict.clear()\n",
+    "# dict\n",
+    "\n",
+    "\n",
+    "#accesing 2d dict\n",
+    "# d={\n",
+    "#     'name':'jo',\n",
+    "#     'college': 'bit',\n",
+    "#     'subject':{\n",
+    "#     'maths':54,\n",
+    "#     'english':89}\n",
+    "# }\n",
+    "# d['subject']['maths']\n",
+    "# #adding new value\n",
+    "# d['subject']['sci']=34\n",
+    "# #delete\n",
+    "# del d['subject']['maths']\n",
+    "# d\n",
+    "\n",
+    "\n",
+    "#editing\n",
+    "# d['sci']=98\n",
+    "# d\n",
+    "\n",
+    "\n",
+    "#operation \n",
+    "#membership\n",
+    "# 'tushar' in  dict # in dict never the value always the key\n",
+    "# 'name' in dict\n",
+    "\n",
+    "#iteration\n",
+    "# for i in dict:\n",
+    "#     # print(i)\n",
+    "#     print(i,dict[i])\n",
+    "\n",
+    "\n",
+    "#functions in dict\n",
+    "# len(dict)\n",
+    "# sorted(dict)\n",
+    "#max and min wil; give ans on basis of ascii key\n",
+    "\n",
+    "# print(dict.items())  #----- tuples ki form me answer dega\n",
+    "# print(dict.keys())\n",
+    "# print(dict.values())\n",
+    "\n",
+    "# update\n",
+    "# d1={1:2,3:4,5:6}\n",
+    "# d2={4:7, 6:8}\n",
+    "\n",
+    "# d1.update(d2)\n",
+    "# d1\n",
+    "\n",
+    "\n",
+    "#dict comprehension\n",
+    "\n",
+    "#print 1st  10 numbers numbers and their squares\n",
+    "# {i:i*2 for i in range(1,11)}\n",
+    "\n",
+    "#using  existing diction \n",
+    "#target we have to convert the km in miles\n",
+    "distances ={'mumbai':1000,\"pune\":800,'jaipur':100}\n",
+    "{key:value*0.62 for (key,value)in distances.items()}\n",
+    "\n",
+    "##using zip\n",
+    "\n",
+    "##nested comprehension\n",
+    "#print tables from 2 to 4\n",
+    "{i:{j:i*j for j in range(1,11)} for i in range(2,5)}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21ac0af8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
