--- a/python.ipynb
+++ b/python.ipynb
@@ -1072,6 +1072,108 @@
    "execution_count": null,
    "id": "21ac0af8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "india -> delhi\n",
+      "usa -> america\n",
+      "south -> africa\n"
+     ]
+    }
+   ],
+   "source": [
+    "##functions in python\n",
+    "# what are function ?---> agr ander kya hai apne ko nahi paata pr use kese krte h u know\n",
+    "# 1. built in function --- print , type , input\n",
+    "#2. user defined function ---> login , regestratoin k liye function\n",
+    "\n",
+    "# function  banate ek baar hai use kai baar hote hai\n",
+    "\n",
+    "#abstraction ka mtlb hota hai hota h pr dikhta nai\n",
+    "\n",
+    "#components of function\n",
+    "# def is_even(i):\n",
+    "#       \" doc string\"\n",
+    "#      body x=i%2==0\n",
+    "#     return x\n",
+    "#   is_even(6)\n",
+    "\n",
+    "\n",
+    "# # let's create function\n",
+    "# def is_even(num):\n",
+    "#     \"\"\"\n",
+    "#     This function return if the number is even or odd\n",
+    "#     \"\"\"\n",
+    "#     if num%2==0:\n",
+    "#         return(\"even\")\n",
+    "#     else:\n",
+    "#         return(\"odd\")\n",
+    "\n",
+    "\n",
+    "# #function_name(input)\n",
+    "# for i in range(1,11):\n",
+    "#     x=is_even(i)\n",
+    "#     print(i,x)\n",
+    "\n",
+    "\n",
+    "#parameter and arguments\n",
+    "#jab function banate hai tb wo parameter hota h\n",
+    "# or jab function call krte h argument kehte hai\n",
+    "\n",
+    "\n",
+    "#types of arguments:\n",
+    "#default argument\n",
+    "def power(a=1,b=2):  # basically apn ne a,or b ki value leli ki agr koi a ya b me se ek ki hi value de to error na aaye\n",
+    "    return a**b\n",
+    "# power(3)\n",
+    "\n",
+    "#2. positional arguments\n",
+    "# power(2,3) #isme 2=2 and 3=b yahi hai positonal arg\n",
+    "\n",
+    "#3. keywword arg\n",
+    "# power(b=3,a=2) # isme positon se nahi keyword se frk pd rha hai ki a ki value yeh b ki yeh\n",
+    "\n",
+    "\n",
+    "## *args and *kwargs\n",
+    "#inko use krke kitne bhi input use kr sakte ho\n",
+    "#*args ---allow us to pass a variable number  of non -keyword arguments  to a function\n",
+    "def multiply(*args):\n",
+    "    product = 1\n",
+    "\n",
+    "    for i in args:\n",
+    "        product = product * i\n",
+    "    \n",
+    "    print(args)\n",
+    "    return product\n",
+    "multiply(1,2,3,4,5)\n",
+    "\n",
+    "## if we want to see doc or docstring we use __doc__\n",
+    "\n",
+    "\n",
+    "# **kwargs\n",
+    "# **kwargs  allow us to pass  any number of  keyword arguments\n",
+    "# keyword arguments means  that they contain  a key value pair , like a python dictionary\n",
+    "# def display(**kwarge):\n",
+    "#     for(key, value) in kwarge.items():\n",
+    "#         print(key,\"->\",value)\n",
+    "\n",
+    "# display(india=\"delhi\",usa=\"america\",south=\"africa\")\n",
+    "\n",
+    "#points to rember in *args and **kwargs\n",
+    "# 1. order of the arguments matter( normal-> *args ->**kwargs)\n",
+    "#2. the word \"args \"and \"kwargs \" are only a  convention , you can use any word\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c39ea93",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
