--- a/python.ipynb
+++ b/python.ipynb
@@ -1069,19 +1069,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "21ac0af8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3, 4, 5)\n",
-      "india -> delhi\n",
-      "usa -> america\n",
-      "south -> africa\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1140,15 +1140,15 @@
     "## *args and *kwargs\n",
     "#inko use krke kitne bhi input use kr sakte ho\n",
     "#*args ---allow us to pass a variable number  of non -keyword arguments  to a function\n",
-    "def multiply(*args):\n",
-    "    product = 1\n",
+    "# def multiply(*args):\n",
+    "#     product = 1\n",
     "\n",
-    "    for i in args:\n",
-    "        product = product * i\n",
+    "#     for i in args:\n",
+    "#         product = product * i\n",
     "    \n",
-    "    print(args)\n",
-    "    return product\n",
-    "multiply(1,2,3,4,5)\n",
+    "#     print(args)\n",
+    "#     return product\n",
+    "# multiply(1,2,3,4,5)\n",
     "\n",
     "## if we want to see doc or docstring we use __doc__\n",
     "\n",
@@ -1166,7 +1166,97 @@
     "# 1. order of the arguments matter( normal-> *args ->**kwargs)\n",
     "#2. the word \"args \"and \"kwargs \" are only a  convention , you can use any word\n",
     "\n",
-    "\n"
+    "### **** we should always use return in function not print \n",
+    "\n",
+    "#global variable main program m aate h\n",
+    "# local variable function m aate h\n",
+    "\n",
+    "# ek variable scope hota h agr kabhi smjh nahi aaye toh 'campusx session-6 1.01-1.16hrs'dekh lena\n",
+    "\n",
+    "##nested function \n",
+    "# def f():\n",
+    "#     def g():\n",
+    "#         print(\"inside the g\")\n",
+    "#     g()\n",
+    "#     print(\"inside the f\")\n",
+    "# kabhi bhi apn directly g() ko access nahi krte mtlb ander wale ko nahi kr sakte directly acess\n",
+    "\n",
+    "#more ques on nested\n",
+    "# def g(x):\n",
+    "#     def h():\n",
+    "#         x='abc'\n",
+    "#     x=x+1\n",
+    "#     print('in g(x): x=',x)\n",
+    "#     h()\n",
+    "#     return x\n",
+    "\n",
+    "# x=3\n",
+    "# z=g(x)\n",
+    "\n",
+    "\n",
+    "# function are 1st class citizen\n",
+    "#type and id\n",
+    "def sq(num):\n",
+    "    return num**2\n",
+    "# num =2\n",
+    "# id(num)\n",
+    "# type(sq)\n",
+    "\n",
+    "#deleting the function \n",
+    "# del sq\n",
+    "\n",
+    "#storing\n",
+    "# l=[1,2,3,sq]\n",
+    "# l[-1](3)\n",
+    "\n",
+    "\n",
+    "#benefits of using function\n",
+    "#1.code modularity 2. code readibility 3.code reusability\n",
+    "\n",
+    "\n",
+    "## lambda function /// important\n",
+    "# a lmbda function is a small ananomous function \n",
+    "# a lambda function can take any number of arguments , but takes only one expression\n",
+    "# lambda a, b : a+b\n",
+    "# make a lambda function that give sq\n",
+    "# a= lambda x:x**2\n",
+    "# a(2) \n",
+    "\n",
+    "##difference b/w lambda and noramal function\n",
+    "# no name / lambda has  no return value  / lambda is  written in 1 line / no reusable \n",
+    "# then why use lambda function ---> the used in higher order function (HOF)\n",
+    "\n",
+    " #example  check if a in a string\n",
+    "# x= lambda a: 'e' in a\n",
+    "# x(\"hello\")\n",
+    "# #odd or even\n",
+    "# x= lambda a : 'even' if a%2==0 else 'odd'\n",
+    "# x(79)\n",
+    "\n",
+    "##higher order function\n",
+    "# ek esa function jo dusre function ko return\n",
+    "# ek esa function jo input m dusra function me receice kre\n",
+    "\n",
+    "\n",
+    "\n",
+    "#map function ---> isme lambda use krte hai or iteration -- yeh krta h ki koi bhi logic use kr sakte h\n",
+    "# list(map(lambda x:x**2,[1,2,3,4]))\n",
+    "# l=[1,2,3,4,5]\n",
+    "# list(map(lambda x: 'even' if x%2==0 else 'odd',l))\n",
+    "\n",
+    "\n",
+    "#filter function\n",
+    "# ek given condtion p list me se filtering krta hai\n",
+    "# l=[3,4,5,6,7]\n",
+    "# list(filter(lambda x: x>5,l))\n",
+    "\n",
+    "#reduce function \n",
+    "# yeh default nahi h ise pehele import krna pdta hai\n",
+    "#sum of all item\n",
+    "import functools\n",
+    "functools.reduce(lambda x,y:x+y,[1,2,3,4,5])\n",
+    "# another example find min\n",
+    "functools.reduce(lambda x,y:x if x<y else y ,[23,11,45,10,1])"
    ]
   },
   {
